# cuda_kernel

./: README.md  rep1.cu
attention/: CMakeLists.txt
conv/: CMakeLists.txt
conv/common/: utils.cpp
conv/include/: conv_host.h  conv_kernel.h
conv/include/cutlass/conv/device/: implicit_gemm_convolution.h
conv/profiles/ncu/: conv_cudnn.ncu-rep
conv/src/: conv.cpp  conv_host.cpp  conv_kernel.cu
device_info/: CMakeLists.txt
device_info/src/: device_info.cu
elementwise/: CMakeLists.txt
elementwise/include/: add_host.h  add_kernel.h  elementwise_kernel.h
elementwise/src/: add.cpp  add_host.cpp  add_kernel.cu  elementwise.cpp  elementwise_host.cpp  elementwise_kernel.cu
gemm/: CMakeLists.txt
gemm/include/: gemm.h  gemm_kernel.h
gemm/profiles/ncu/: sgemm_prefetch.ncu-rep
gemm/src/: gemm.cpp  gemm_host.cpp  gemm_kernel.cu
gemm/tests/: test_matmul_base.cpp
hgemm/: CMakeLists.txt
hgemm/common/: utils.cpp  utils.hpp
hgemm/include/: hgemm_host.h  hgemm_kernel.h
hgemm/include/cutlass/gemm/device/: gemm.h
hgemm/src/: hgemm.cpp  hgemm_host.cpp  hgemm_kernel.cu
layernorm/: CMakeLists.txt
layernorm/common/: utils.cpp
layernorm/include/: layernorm_host.h  layernorm_kernel.h
layernorm/profiles/ncu/: layernorm_bankconflict.ncu-rep  layernorm_baseline.ncu-rep  layernorm_unroll.ncu-rep  layernorm_vec4.ncu-rep
layernorm/src/: layernorm.cpp  layernorm_host.cpp  layernorm_kernel.cu
reduce/: CMakeLists.txt
reduce/include/: reduce_host.h  reduce_kernel.h
reduce/profiles/: reduce.ncu-rep
reduce/src/: reduce.cpp  reduce_host.cpp  reduce_kernel.cu
sgemm/: CMakeLists.txt
sgemm/profiles/ncu/: sgemm_baseline.ncu-rep  sgemm_tilek.ncu-rep
sgemm/src/: gemm_kernel.cu
softmax/: CMakeLists.txt
softmax/common/: utils.cpp
softmax/include/: softmax_host.h  softmax_kernel.h
softmax/profiles/: softmax.ncu-rep
softmax/profiles/ncu/: softmax_base.ncu-rep  softmax_basev1.ncu-rep  softmax_vec.ncu-rep  softmax_vec_share.ncu-rep
softmax/src/: softmax.cpp  softmax_host.cpp  softmax_kernel.cu
transpose/: CMakeLists.txt
transpose/include/: transpose_host.h  transpose_kernel.h
transpose/profiles/ncu/: transpose.ncu-rep  transpose_base.ncu-rep  transpose_share.ncu-rep  transpose_shared.ncu-rep
transpose/src/: transpose.cpp  transpose_host.cpp  transpose_kernel.cu
